/*
 * Copyright 2018, TeamDev. All rights reserved.
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

package io.spine.server.bc.given;

import com.google.protobuf.Empty;
import io.spine.core.CommandContext;
import io.spine.core.EventContext;
import io.spine.core.Subscribe;
import io.spine.server.command.Assign;
import io.spine.server.procman.ProcessManager;
import io.spine.test.bc.ProjectId;
import io.spine.test.bc.command.BcCreateProject;
import io.spine.test.bc.event.BcProjectCreated;
import io.spine.validate.EmptyVBuilder;

/**
 * @author Alexander Yevsyukov
 */
public class ProjectProcessManager
        extends ProcessManager<ProjectId, Empty, EmptyVBuilder> {

    public ProjectProcessManager(ProjectId id) {
        super(id);
    }

    @Assign
    BcProjectCreated handle(BcCreateProject command, CommandContext ctx) {
        return BcProjectCreated.newBuilder()
                               .setProjectId(command.getProjectId())
                               .build();
    }

    @Subscribe
    public void on(BcProjectCreated event, EventContext ctx) {
        // Do nothing, just watch.
    }
}
